[package]
name = "grand_strategy"
version = "0.1.0"
authors = ["TheLeonsver1 <sverdleon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", branch="main"}
rand = "0.8.3"
ron = "0.6.4"
serde = {version = "1.0.124", features = ["derive"]}
anyhow = "1.0.38"